k8s/Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: starter-1
  labels:
    app: starter-1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: starter-1
  template:
    metadata:
      labels:
        app: starter-1
    spec:
      containers:
        - name: starter-1
          image: sample/starter-1:latest
          ports:
            - containerPort: 8080
