k8s/Service.yml
apiVersion: v1
kind: Service
metadata:
  name: starter-1-service
spec:
  selector:
    app: starter-1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
